# traveltime-google-comparison

./: README.md  config.json  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yml  publish.yml
examples/: uk.csv
inputs/: Australia.csv  Austria.csv  Belgium.csv  Canada.csv  Croatia.csv  Finland.csv  France.csv  Germany.csv  Greece.csv  Hungary.csv  India.csv  Ireland.csv  Italy.csv  Japan.csv  Latvia.csv  Lithuania.csv  Mexico.csv  Norway.csv  Poland.csv  Portugal.csv  Romania.csv  Saudi_Arabia.csv  Slovenia.csv  South_Africa.csv  Spain.csv  Sweden.csv  Switzerland.csv  USA.csv  United_Kingdom.csv
src/traveltime_google_comparison/: analysis.py  collect.py  config.py  main.py
src/traveltime_google_comparison/requests/: base_handler.py  factory.py  google_handler.py  here_handler.py  mapbox_handler.py  openroutes_handler.py  osrm_handler.py  tomtom_handler.py  traveltime_credentials.py  traveltime_handler.py
test/: test_analysis.py  test_collect.py  test_config.py
test/requests/: test_google_handler.py  test_traveltime_handler.py
traveltime_google_comparison/: analysis.py
traveltime_google_comparison/requests/: factory.py  google_handler.py
