[build-system]
requires = ["setuptools>=64", "wheel", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "traveltime-google-comparison"
description = "Compare travel times obtained from TravelTime API and Google Maps API"
authors = [
    { name = "TravelTime" },
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License"
]
dynamic = ["version"]
requires-python = ">= 3.8"
dependencies = [
    "aiohttp",
    "aiolimiter",
    "pandas",
    "pytz",
    "traveltimepy"
]

[project.urls]
Homepage = "https://github.com/traveltime-dev/traveltime-google-comparison"

[project.optional-dependencies]
test = [
    "pytest",
    "flake8",
    "flake8-pyproject",
    "mypy",
    "black",
]

[project.scripts]
traveltime_google_comparison = "traveltime_google_comparison.main:main"

[tool.setuptools_scm]
