[metadata]
name = traveltime-google-comparison
version = 0.1.0
author = TravelTime
description = A tool to compare travel times from TravelTime API and Google Maps API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/traveltime-dev/traveltime-google-comparison
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.8
packages = find:
install_requires =
    aiohttp
    aiolimiter
    pandas
    pytz
    traveltimepy

[options.extras_require]
test =
    pytest

[options.entry_points]
console_scripts =
    traveltime_google_comparison = traveltime_google_comparison.main:main
